--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,5 +8,5 @@
         android:icon="@drawable/ic_impostazioni"/>
     <item android:id="@+id/action_about"
           android:title="About"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 </menu>
