--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -7,29 +7,37 @@
     android:gravity="center">
 
     <TextView
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:id="@+id/tv1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tv2"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tv3"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:textAlignment="center" />
     <TextView
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="1"
@@ -38,9 +46,11 @@
         android:textAlignment="center"/>
 
     <Button
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:id="@+id/button1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="+" />
 
