--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,12 +2,11 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/VerticalLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".MainActivity"
         tools:showIn="@layout/app_bar_main">
 
         <LinearLayout
@@ -15,27 +14,80 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/search_editText"
-                android:layout_width="wrap_content"
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/searchview"
+                android:queryHint="Cerca"
+                android:inputType="textCapWords"
+                android:iconifiedByDefault="false"
+                android:textAlignment="center">
+            </SearchView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/table"
+            android:orientation="horizontal"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/search_EditText"
-                android:inputType="textCapSentences"
+                android:gravity="center"
                 android:textAlignment="center"
-                android:textStyle="bold" />
+                android:text="@string/prezzo"/>
 
-            <Button
-                android:id="@+id/search_Button"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/search_Button" />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="@string/localit"/>
+
+            <TextView
+                android:id="@+id/tv3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="@string/nome"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/tv4"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:text="@string/marca"/>
+
+            <TextView
+                android:id="@+id/button1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/button" />
+
         </LinearLayout>
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ListViewDatabase"
-            ></ListView>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ListViewDatabase" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/TextViewEmpty"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:paddingTop="350dp"
+                android:text="@string/cerca_i_prodotti"
+                android:textStyle="bold"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="50sp"/>
 
     </LinearLayout>
