--- a/app/src/main/res/layout/no_internet_dialog_content.xml
+++ b/app/src/main/res/layout/no_internet_dialog_content.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:backgroundTint="@android:color/transparent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dialog_tv_alert"
+        android:text="@string/dialogTextViewAlert"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dialog_button"
+        android:text="OK"
+        android:padding="10dp"
+        android:backgroundTint="@android:color/transparent"/>
+</LinearLayout>
