--- a/app/src/main/res/xml/activity_settings.xml
+++ b/app/src/main/res/xml/activity_settings.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="pref_ordine"
-        android:key="pref_ordine_category">
+    android:title="Preferenze ordine"
+    android:key="pref_ordine_category">
+    <ListPreference
+        android:key="pref_ordine"
+        android:title="Ordine prodotti"
+        android:summary="Seleziona come ordinare i prodotti, se in ordine di prezzo, di nome o di località"
+        android:dialogTitle="Ordine prodotti"
+        android:entries="@array/keys_ordine"
+        android:entryValues="@array/values_ordine"
+        android:defaultValue="0" />
+    </PreferenceCategory>
+    <PreferenceCategory
+        android:title="Preferenze ricerca"
+        android:key="pref_ricerca">
         <ListPreference
-            android:key="pref_ordine"
-            android:title="Ordine prodotti"
-            android:summary="Seleziona come ordinare i prodotti, se in ordine di prezzo, di nome o di località"
-            android:dialogTitle="Ordine prodotti"
-            android:entries="@array/keys_ordine"
-            android:entryValues="@array/values_ordine"
-            android:defaultValue="0" />
+            android:key="pref_ricerca"
+            android:title="Metodo di ricerca"
+            android:summary="Seleziona in che modo vuoi effettuare la ricerca, se attraverso tutti i parametri,oppure solo attraverso nome, marca, o supermercato"
+            android:dialogTitle="Metodo di ricerca"
+            android:entries="@array/metodo_ordine"
+            android:entryValues="@array/values_metodo"
+            android:defaultValue="0"/>
     </PreferenceCategory>
 </PreferenceScreen>
