--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -39,7 +39,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/tv4"
         android:gravity="center"
@@ -49,6 +49,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:id="@+id/button1"
+        android:backgroundTint="#39DD3F"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
