--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,12 +13,8 @@
             android:icon="@drawable/ic_impostazioni"
             android:title="Impostazioni" />
         <item
-            android:id="@+id/nav_login"
-            android:icon="@drawable/in_login"
-            android:title="Login" />
-        <item
             android:id="@+id/nav_barcode"
-            android:icon="@drawable/ic_action_name"
+            android:icon="@drawable/ic_barcode"
             android:title="Barcode Reader"/>
     </group>
 
