--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="18dp"/>
 
     <TextView
         android:id="@+id/tv2"
@@ -24,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="18dp"/>
 
     <TextView
         android:id="@+id/tv3"
@@ -34,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="18dp"/>
     <TextView
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -43,17 +46,20 @@
         android:layout_weight="1"
         android:id="@+id/tv4"
         android:gravity="center"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="20dp"/>
 
     <Button
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:id="@+id/button1"
-        android:backgroundTint="#39DD3F"
+        android:backgroundTint="#4CAF50"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="+" />
+        android:background="@drawable/rounded_button"
+        android:text="+"
+        />
 
 
 </LinearLayout>
