--- a/app/src/main/res/layout/barcode_reader_content.xml
+++ b/app/src/main/res/layout/barcode_reader_content.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:text="QR/Barcode Scan" />
+        android:text="Premi per scannerizzare" />
 
 
 </RelativeLayout>
